--- a/usvihistory.html
+++ b/usvihistory.html
@@ -1,51 +1,56 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History of the US Virgin Islands</title>
+    <title>U.S. Virgin Islands</title>
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 20px;
+        h1, h2, h3, h4 {
+            font-family: 'Times New Roman', sans-serif;
+            font-size: 20px;
+            color: darkbrown;
         }
 
-        h1 {
-            text-align: center;
+        #paragraph1 {
+            /* Style for first paragraph */
+            font-style: italic;
+            font-weight: bold;
+        }
+
+        #paragraph2 {
+            /* Style for second paragraph */
+            text-decoration: underline;
+        }
+
+        .country {
+            /* Style for elements with class "country" */
+            font-style: italic;
+            color: #0000FF; /* Blue color for country names */
         }
 
         p {
-            text-align: justify;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
+            color: rgb(255, 0, 0);
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>History of the United States Virgin Islands (USVI)</h1>
-        <p>The United States Virgin Islands (USVI) are a group of islands in the Caribbean Sea. They are located east of Puerto Rico and are an unincorporated territory of the United States. Here is a brief overview of their history:</p>
+    <div>
+        <h1>Denmark–Norway and U.S. Virgin Islands</h1>
+        <p id="paragraph1">Denmark–Norway also took an interest in the islands, and the Danish West India Company settled on St. Thomas in 1672 and St. John in 1694, later purchasing St. Croix from France in 1733.[12] The islands became royal Danish colonies in 1754, named the Danish West Indian Islands (Danish: De dansk-vestindiske øer). Initially the currency was the Danish West Indian rigsdaler, replaced by the daler in 1849. The islands proved ideal for sugar plantations: sugarcane, produced by enslaved Africans, drove the islands' economy during the 18th and early 19th centuries.[8] Other plantation crops included cotton and indigo dye.[13][better source needed] During the 17th and 18th centuries, a sizable Jewish community also began to settle on the islands.[14]</p>
 
-        <h2>Ancient Inhabitants</h2>
-        <p>The Virgin Islands were originally inhabited by the Ciboney, Carib, and Arawak Indians. Christopher Columbus is credited with discovering the islands on his second voyage to the Americas in 1493.</p>
+        <h2>Slave Rebellion on St. John</h2>
+        <p id="paragraph2">The Høgensborg estate on Sankt Croix, 1833
+In 1733, St. John was the site of one of the first significant slave rebellions in the New World when Akan–Akwamu slaves from the Gold Coast (modern Ghana) took over the island for six months. The Danish were able to defeat the enslaved Africans with help from the French in Martinique.[15] Instead of allowing themselves to be recaptured, more than a dozen of the ringleaders shot themselves before the French forces could capture them. It is estimated that by 1775, slaves outnumbered the Danish settlers by a ratio of 8:1.[16][17]</p>
 
-        <h2>Colonial Era</h2>
-        <p>The islands were settled by the Danish in the 17th century and were known as the Danish West Indies. Sugar plantations were established, and African slaves were brought to work on these plantations.</p>
+        <h3>Impact of Hurricanes</h3>
+        <p class="country">The aftermath of Hurricane Marilyn on the island of St. Thomas, 1995. In recent decades the U.S. Virgin Islands have been devastated by a series of hurricanes.
+Hurricane Hugo struck the U.S. Virgin Islands in 1989, causing catastrophic physical and economic damage, particularly on the island of St. Croix. The territory was again struck by Hurricane Marilyn in 1995, killing eight people and causing more than $2 billion in damage. The islands were again struck by hurricanes Bertha, Georges, Lenny, and Omar in 1996, 1998, 1999, and 2008, respectively, but damage was not as severe in those storms.</p>
 
-        <h2>Transfer to the United States</h2>
-        <p>In 1917, the United States purchased the Virgin Islands from Denmark for $25 million in gold. This transfer is now celebrated annually as Transfer Day on March 31st.</p>
-
-        <h2>Modern Era</h2>
-        <p>Today, the US Virgin Islands are a popular tourist destination known for their beautiful beaches, rich culture, and history.</p>
-
-        <h2>References</h2>
-        <p>For more detailed information about the history of the US Virgin Islands, you can visit the <a href="https://en.wikipedia.org/wiki/United_States_Virgin_Islands">Wikipedia page</a> on the topic.</p>
+        <h4>Recent Devastation</h4>
+        <p class="country">In September 2017, Category 5 Hurricane Irma caused catastrophic damage, particularly to St. John and St. Thomas. Just two weeks later, Category 5 Hurricane Maria ravaged all three islands. Sustained winds at the Sandy Point National Wildlife Refuge on St. Croix reached 99 to 104 mph (159 to 167 km/h) and gusted to 137 mph (220 km/h).[37] Even stronger winds likely occurred somewhere across the island's west end. The British Virgin Islands and the other two U.S. Virgin Islands, St. John and St. Thomas, were far enough northeast to avoid the worst from Maria, but were still massively impacted, with great destruction everywhere. A wind gust to 86 mph (138 km/h) was reported at St. Thomas. Weather stations on St. Croix recorded 5 and 10 inches (130 and 250 mm) of rain from the hurricane, and estimates for St. John and St. Thomas were somewhat less.[38] The hurricane killed two people, both in their homes: one person drowned and another was trapped by a mudslide.[39] A third person had a fatal heart attack during the hurricane.[40] The hurricane caused extensive and severe damage to St. Croix. After both hurricanes, the office of Virgin Islands congresswoman Stacey Plaskett stated that 90% of buildings in the Virgin Islands were damaged or destroyed and 13,000 of those buildings had lost their roofs.[41] The Luis Hospital suffered roof damage and flooding, but remained operational.[42]</p>
     </div>
 </body>
 
